Scan-based moving and linking

--- a/capacitor/src/lib/global.css
+++ b/capacitor/src/lib/global.css
@@ -65,6 +65,8 @@ input:focus {
   left: 0;
   z-index: 10;
   width: 100%;
+  overflow: auto;
+  white-space: nowrap;
 }
 a {
   color: var(--accent);
